@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mklinger.jgroups</groupId>
 	<artifactId>jgroups-http2</artifactId>
@@ -92,11 +93,11 @@
 			<version>${jetty.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.eclipse.jetty.alpn</groupId>
-		    <artifactId>alpn-api</artifactId>
-		    <version>1.1.3.v20160715</version>
+			<groupId>org.eclipse.jetty.alpn</groupId>
+			<artifactId>alpn-api</artifactId>
+			<version>1.1.3.v20160715</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -109,7 +110,7 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
@@ -145,7 +146,7 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
@@ -153,25 +154,13 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--
-		ALPN.
-		See https://www.eclipse.org/jetty/documentation/9.4.x/alpn-chapter.html
-		
-		As VM launch parameter in Eclipse use
-		-Xbootclasspath/p:${system_property:user.home}/.m2/repository/org/mortbay/jetty/alpn/alpn-boot/8.1.7.v20160121/alpn-boot-8.1.7.v20160121.jar
-		
-		1.8.0u74: 8.1.7.v20160121
-		1.8.0u77: 8.1.7.v20160121
-		1.8.0u91: 8.1.7.v20160121
-		1.8.0u92: 8.1.8.v20160420
-		1.8.0u101: 8.1.9.v20160720
-		1.8.0u102: 8.1.9.v20160720
-		1.8.0u111: 8.1.9.v20160720
-		1.8.0u112: 8.1.10.v20161026
-		1.8.0u121: 8.1.11.v20170118
-		-->
+		<!-- ALPN. See https://www.eclipse.org/jetty/documentation/9.4.x/alpn-chapter.html 
+			As VM launch parameter in Eclipse use -Xbootclasspath/p:${system_property:user.home}/.m2/repository/org/mortbay/jetty/alpn/alpn-boot/8.1.7.v20160121/alpn-boot-8.1.7.v20160121.jar 
+			1.8.0u74: 8.1.7.v20160121 1.8.0u77: 8.1.7.v20160121 1.8.0u91: 8.1.7.v20160121 
+			1.8.0u92: 8.1.8.v20160420 1.8.0u101: 8.1.9.v20160720 1.8.0u102: 8.1.9.v20160720 
+			1.8.0u111: 8.1.9.v20160720 1.8.0u112: 8.1.10.v20161026 1.8.0u121: 8.1.11.v20170118 -->
 	</dependencies>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -198,8 +187,27 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.20.1</version>
+				<configuration>
+					<argLine>--add-modules jdk.incubator.httpclient</argLine>
+					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
-	
+
 	<profiles>
 		<profile>
 			<!-- ossrh release -->
